--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,7 @@ jobs:
       - run:
           name: Install API Dependencies
           command: |
-           npm run api:install
+           npm run api:install --legacy-peer-deps
       # TODO: Lint the frontend
       - run:
           name: Front-End Lint
