--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,12 +23,12 @@ jobs:
             echo $(node --version)
             echo "NPM --version" 
             echo $(npm --version)
-            npm run frontend:install
+            npm run frontend:install --legacy-peer-deps
       # TODO: Install dependencies in the the backend API          
       - run:
           name: Install API Dependencies
           command: |
-           npm run api:install --legacy-peer-deps
+           npm run api:install
       # TODO: Lint the frontend
       - run:
           name: Front-End Lint
