--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,7 @@ jobs:
             echo $(node --version)
             echo "NPM --version" 
             echo $(npm --version)
-            npm run frontend:install --legacy-peer-deps
+            npm run frontend:install
       # TODO: Install dependencies in the the backend API          
       - run:
           name: Install API Dependencies
