--- a/udagram/udagram-api/package.json
+++ b/udagram/udagram-api/package.json
@@ -13,7 +13,7 @@
     "prod": "npx tsc && node ./www/server.js",
     "clean": "rm -rf www/ || true",
     "deploy": "npm run build && eb list && eb use Myfullstackappelb-env && eb deploy",
-    "build": "npm install . && npm run clean && tsc && cp -rf src/config www/config && cp -R .elasticbeanstalk www/.elasticbeanstalk && cp .npmrc www/.npmrc && zip Archive.zip www/ package.json",
+    "build": "npm install . && npm run clean && tsc && cp -rf src/config www/config && cp -R .elasticbeanstalk www/.elasticbeanstalk && cp .npmrc www/.npmrc && zip -r Archive.zip www/ package.json",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
